--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,20 @@ language: python
 
 python:
   - "2.7"
+  - "3.5"
   - "3.6"
   - "3.7"
 
-install: pip install tox-travis
+install:
+  - pip install tox-travis
+  - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then pip install coveralls -e .; fi
 
-script: tox
+script:
+  - tox
+  - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then coverage run -m pytest tests; fi
+
+after_success:
+  - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then coveralls; fi
 
 notifications:
   email: false
