Config test key.

--- a/tox.ini
+++ b/tox.ini
@@ -6,6 +6,8 @@ minversion = 3.3.0
 isolated_build = true
 
 [testenv]
+setenv =
+    GOOGLE_APPLICATION_CREDENTIALS=pytest@bqtoolkit.json
 deps =
     check-manifest
     flake8
