--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ python:
 install:
   - pip install tox-travis
   - echo "$GKEY" > pytest@bqtoolkit.json
+  - export GOOGLE_APPLICATION_CREDENTIALS=pytest@bqtoolkit.json
   - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then pip install coveralls -e .; fi
 
 script:
