--- a/tox.ini
+++ b/tox.ini
@@ -12,6 +12,7 @@ deps =
     check-manifest
     flake8
     pytest
+extras = testing
 commands =
     check-manifest --ignore tox.ini,tests*
     python setup.py check -m -s
