--- a/tox.ini
+++ b/tox.ini
@@ -20,5 +20,5 @@ commands =
     py.test tests
 
 [flake8]
-exclude = .tox,*.egg,build,data,venv
+exclude = .tox,*.egg,build,data,venv,utils
 select = E,W,F
