Add missing test file.

--- a/tox.ini
+++ b/tox.ini
@@ -5,9 +5,11 @@ minversion = 3.3.0
 
 isolated_build = true
 
-[testenv]
+[testenv:py37]
 setenv =
     GOOGLE_APPLICATION_CREDENTIALS=pytest@bqtoolkit.json
+
+[testenv]
 deps =
     check-manifest
     flake8
