--- a/tox.ini
+++ b/tox.ini
@@ -22,5 +22,5 @@ commands =
     py.test tests
 
 [flake8]
-exclude = .tox,*.egg,build,data,venv,utils
+exclude = .tox,*.egg,build,data,venv,utils,docs
 select = E,W,F
