--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@ deps =
     pytest
 extras = testing
 commands =
-    check-manifest --ignore tox.ini,tests*
+    check-manifest --ignore tox.ini
     python setup.py check -m -s
     flake8 .
     py.test tests
