Remove Python 3.5 support, bump google-cloud-bigquery max version

--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py{36,37}
+envlist = py{37}
 
 minversion = 3.3.0
 
@@ -12,7 +12,7 @@ setenv =
 [testenv]
 deps =
     check-manifest
-    flake8
+    flake8<5.0.0
     pytest
 extras = testing
 commands =
