--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ python:
   - "3.10"
 
 install:
-  - pip install importlib-metadata<5.0.0
+  - pip install 'importlib-metadata<5.0.0'
   - pip install tox-travis
   - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then echo "$GKEY" > pytest@bqtoolkit.json; fi
   - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then export GOOGLE_APPLICATION_CREDENTIALS=pytest@bqtoolkit.json; fi
