--- a/.travis.yml
+++ b/.travis.yml
@@ -4,21 +4,20 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
-  - "3.10"
+  - "3.9"
 
 install:
-  - pip install 'importlib-metadata<5.0.0'
   - pip install tox-travis
   - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then echo "$GKEY" > pytest@bqtoolkit.json; fi
   - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then export GOOGLE_APPLICATION_CREDENTIALS=pytest@bqtoolkit.json; fi
-  - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then pip install coveralls -e .; fi
+  #- if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then pip install coveralls -e .; fi
 
 script:
   - tox
   - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then coverage run -m pytest tests; fi
 
-after_success:
-  - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then coveralls; fi
+#after_success:
+#  - if [ "$TRAVIS_PYTHON_VERSION" = "3.7" ]; then coveralls; fi
 
 notifications:
   email: false
