Set minimum pip version for tox

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,9 @@ minversion = 3.3.0
 
 isolated_build = true
 
+requires =
+    pip >= 19.0.3
+
 [testenv:py38]
 setenv =
     GOOGLE_APPLICATION_CREDENTIALS=pytest@bqtoolkit.json
